[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/game/interface/SlidingMenu.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/gear.png" type="Texture" id=2]

[node name="SlidingMenu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GearButton" type="TextureButton" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 12, 12 )
focus_mode = 0
toggle_mode = true
pressed = true
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="GearButton" to="." method="_on_GearButton_mouse_entered"]
[connection signal="mouse_exited" from="GearButton" to="." method="_on_GearButton_mouse_exited"]
[connection signal="pressed" from="GearButton" to="." method="_on_GearButton_pressed"]
